--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <script type="text/javascript" id="scr_6259f41aa95eb80009cf0f7c">var s=document.createElement("script");s.src="https://cdn.converteai.net/7c7aa9a8-fc60-41c0-897a-799ec785fd38/players/6259f41aa95eb80009cf0f7c/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://https://https://pay.kiwify.com.br/Kz4ySIH" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/Kz4ySIH" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -457,7 +457,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")},); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")},1260000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
