--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6259f41aa95eb80009cf0f7c">var s=document.createElement("script");s.src="https://cdn.converteai.net/7c7aa9a8-fc60-41c0-897a-799ec785fd38/players/6259f41aa95eb80009cf0f7c/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_62b118db3d3318000a43b29b" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62b118db3d3318000a43b29b" src="https://images.converteai.net/7c7aa9a8-fc60-41c0-897a-799ec785fd38/players/62b118db3d3318000a43b29b/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62b118db3d3318000a43b29b" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62b118db3d3318000a43b29b">var s=document.createElement("script");s.src="https://scripts.converteai.net/7c7aa9a8-fc60-41c0-897a-799ec785fd38/players/62b118db3d3318000a43b29b/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/Kz4ySIH" class="a-btn" style="text-decoration: none;">
